# cruel

./: README.md  TODO  layouttests.py  pyproject.toml
src/cruel/: __init__.py  card.py  cardgui.py  cardname.py  cruel.py  cruelcards.py  cruelgame.py  cruelpile.py  deck.py  game.py  image.py  main.py  playingcards.py  stack.py
tests/: test_cardname.py  test_cruel.py  test_cruelcards.py  test_deck.py  test_game.py  test_image.py  test_playingcards.py  test_stack.py
