[tool.poetry]
name = "cruel"
version = "0.2.1"
description = ""
authors = ["ccdale <chris.charles.allison+cruel@gmail.com>"]
readme = "README.md"
packages = [{include = "cruel", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
ccalogging = "^0.4.4"
pysimplegui = "^4.60.5"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
